--- a/docs/tutorial1.ipynb
+++ b/docs/tutorial1.ipynb
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "5c2ed16c",
    "metadata": {},
    "outputs": [],
@@ -657,7 +657,7 @@
     "# first generate the training input for the model\n",
     "X,Y = coregtor.create_model_input(ge_data,target_gene_name,tf_data)\n",
     "# use the training data to create a model\n",
-    "model = coregtor.create_model(X,Y,\"rf\",{ })"
+    "model = coregtor.create_model(X,Y,\"rf\")"
    ]
   },
   {
@@ -4122,24 +4122,6 @@
    ],
    "source": [
     "sim_matrix"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5b674701",
-   "metadata": {},
-   "source": [
-    "## Step 3-7 all at once\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "480530fe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#"
    ]
   },
   {
