basic pipeline ready

--- a/docs/tutorial1.ipynb
+++ b/docs/tutorial1.ipynb
@@ -25,37 +25,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffe18c28",
+   "id": "e350610e",
    "metadata": {},
    "source": [
-    "## Step 1 : Get data\n",
-    "\n",
-    "Before we begin, let's gather all the data we require:\n",
-    "- Gene Expression data `ge_brain.gct`. This file contains tissue gene expression data for the Frontal Cortex (BA9) in an adult brain. The data is downloaded from the [GTEx portal](https://www.gtexportal.org/home/downloads/adult-gtex/bulk_tissue_expression)\n",
-    "- List of transcription factors `human_tf.txt` : This file was downloaded from [aertslab.org](https://resources.aertslab.org/cistarget/tf_lists/)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "14890adb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pathlib import Path \n",
-    "base_path = Path(\"docs/temp\") # UPDATE THIS\n",
-    "data_file_path = Path(base_path/\"brain_ge.gct\") # UPDATE THIS \n",
-    "tf_file_path = Path(base_path/\"human_tf.txt\") # UPDATE THIS\n",
-    "target_gene_name = \"GFAP\"\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7815c72f",
-   "metadata": {},
-   "source": [
-    "## Step 2 : Install and import the `CoRegTor` package\n",
+    "## Step 1 : Install and import the `CoRegTor` package and other dependencies \n",
     "\n",
     "Using pip, `pip install coregtor` .\n",
     "\n",
@@ -64,8 +37,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "4f9db4e4",
+   "execution_count": 1,
+   "id": "d543fcfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,28 +50,39 @@
     "    import coregtor\n",
     "\n",
     "# Additional imports\n",
-    "from pathlib import Path\n"
+    "from pathlib import Path\n",
+    "import pandas as pd\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7debda4a",
+   "id": "ffe18c28",
    "metadata": {},
    "source": [
-    "## Step 3 : Load gene expression data and transcription factors\n",
+    "## Step 2 : Get data and load it\n",
     "\n",
-    "Let's now load the data using the `read` method that accepts path to the gene expression data. The method outputs a pandas DataFrame with genes as columns and samples as rows. "
+    "Let's gather all the data we require:\n",
+    "- Gene Expression data `ge_brain.gct`. This file contains tissue gene expression data for the Frontal Cortex (BA9) in an adult brain. The data is downloaded from the [GTEx portal](https://www.gtexportal.org/home/downloads/adult-gtex/bulk_tissue_expression)\n",
+    "- List of transcription factors `human_tf.txt` : This file was downloaded from [aertslab.org](https://resources.aertslab.org/cistarget/tf_lists/)\n",
+    "\n",
+    "\n",
+    "We load this data in dataframes. Now we are ready to use CoRegTor!"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dfb307d2",
+   "id": "14890adb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "ge_data = coregtor.read(file_path=data_file_path)\n",
+    "base_path = Path(\"docs/temp\") # UPDATE THIS\n",
+    "data_file_path = Path(base_path/\"brain_ge.gct\") # UPDATE THIS \n",
+    "tf_file_path = Path(base_path/\"human_tf.txt\") # UPDATE THIS\n",
+    "target_gene_name = \"GFAP\" # the gene we are interested in \n",
+    "\n",
+    "# load data \n",
+    "ge_data = coregtor.utils.read_GE_data(file_path=data_file_path) # this is just a utility method\n",
     "tf_data = pd.read_csv(tf_file_path, names=[\"gene_name\"], header=None)"
    ]
   },
@@ -640,11 +624,11 @@
    "id": "a51ba132",
    "metadata": {},
    "source": [
-    "## Step 4 : Create Ensemble model\n",
+    "## Step 3 : Create Ensemble model\n",
     "\n",
-    "Next, we generate a random forest ensemble model using the gene expression data to predict the expression value of the gene \"GFAP\" based on all other genes. \n",
+    "The first step in the process is to generate a random forest ensemble model using the gene expression data that predicts the expression value of the gene \"GFAP\" based on all other genes. \n",
     "\n",
-    "Since we are interested in identifying potential transcription co regulators, we filter the data to include only transcription factors. We use the `create_model_input` function for filtering and preparing the input for training. It takes a dataframe  `t_factors` which should have a column `gene_name` listing the transcription factors to consider. The function outputs a tuple containing 2 data frames: X with the feature genes and Y with the target gene. These can then be passed to the `generate_model` function. \n"
+    "Since we are interested in identifying potential transcription co regulators, we filter the data to include only transcription factors. We use the `create_model_input` function for filtering and preparing the input for training. It takes a dataframe  `t_factors` which should have a column `gene_name` listing the transcription factors to consider. The function outputs a tuple containing 2 data frames: X with the feature genes and Y with the target gene. These can then be passed to the `generate_model` function. "
    ]
   },
   {
@@ -656,6 +640,7 @@
    "source": [
     "# first generate the training input for the model\n",
     "X,Y = coregtor.create_model_input(ge_data,target_gene_name,tf_data)\n",
+    "\n",
     "# use the training data to create a model\n",
     "model = coregtor.create_model(X,Y,\"rf\")"
    ]
@@ -1398,13 +1383,13 @@
    "id": "467e1733",
    "metadata": {},
    "source": [
-    "## Step 5 : Generating tree paths \n",
+    "## Step 4 : Generating tree paths \n",
     "\n",
     "The genes on the root node are important. These also serve as potential regulators in other tree based GRN inference methods. \n",
     "\n",
     "Forest based ensemble methods contains multiple decision tress. We want to analyze the structure of the trees in the model. \n",
     "\n",
-    "For each tree, there exists multiple root to leaf paths. We first enumerate all the paths in all the trees in the model. \n"
+    "For each tree, there exists multiple root to leaf paths. We first enumerate all the paths in all the trees in the model. "
    ]
   },
   {
@@ -1794,7 +1779,7 @@
    "id": "997e8cd8",
    "metadata": {},
    "source": [
-    "## Step 6 : Generating context for all root nodes \n",
+    "## Step 5 : Generating a set of common sub paths (or the `context`) for all root nodes \n",
     "\n",
     "In the table of paths above, we observe many unique genes appear as root nodes. Since we train the decision trees to predict the same target gene, the leaf nodes for all paths are the same. \n",
     "\n",
@@ -1842,7 +1827,7 @@
    "id": "da6f6094",
    "metadata": {},
    "source": [
-    "## Step 7 : Comparing context of all root nodes with each other\n",
+    "## Step 6 : Comparing context of all root nodes with each other\n",
     "\n",
     "similarity "
    ]
@@ -4129,7 +4114,7 @@
    "id": "027de310",
    "metadata": {},
    "source": [
-    "## Step 8 : Interactive generation of co-regulating gene clusters"
+    "## Step 7 : Interactive generation of co-regulating gene clusters"
    ]
   },
   {
