exp related utils

--- a/docs/exp.ipynb
+++ b/docs/exp.ipynb
@@ -70,7 +70,7 @@
     "}\n",
     "\n",
     "# Load data \n",
-    "ge_data = coregtor.utils.read_GE_data(file_path=input[\"data_file_path\"]) # this is just a utility method\n",
+    "ge_data = coregtor.utils.exp.read_GE_data(file_path=input[\"data_file_path\"]) # this is just a utility method\n",
     "tf_data = pd.read_csv(input[\"tf_file_path\"], names=[\"gene_name\"], header=None)\n",
     "print(\"Data loaded. Options set\")"
    ]
@@ -187,7 +187,7 @@
     "\n",
     "options[\"notes\"] = \"  \" # UPDATE THIS with something you want to record about this experiment\n",
     "\n",
-    "saved_file = coregtor.utils.save_exp_results(options,input,sim_matrix,results1,runtimes,base_path)"
+    "saved_file = coregtor.utils.exp.save_exp_results(options,input,sim_matrix,results1,runtimes,base_path)"
    ]
   }
  ],
